fix ssh github url

--- a/install/install
+++ b/install/install
@@ -15,7 +15,7 @@ if [[ ! $REPLY =~ ^[Yy]$ ]]; then
     printf "Make sure to use https:// git url to install repos until you have your ssh key forwarded"
     THIS_REPO=https://github.com/amurrell/LEMP-setup-guide.git
 else
-    THIS_REPO=git@github.com/amurrell/LEMP-setup-guide.git
+    THIS_REPO=git@github.com:amurrell/LEMP-setup-guide.git
 fi
 
 cd /var/www/
