Fix pm2 and nvm installations, ensure proper permissions on custom install scripts

--- a/install/components/custom/install
+++ b/install/components/custom/install
@@ -5,6 +5,8 @@ WHERE=$(pwd)
 
 WHERE="$WHERE/scripts/*.sh"
 
+chmod +x "$WHERE"
+
 for f in $WHERE; do  # or wget-*.sh instead of *.sh
   bash "$f" -H  || break # if needed 
 done
