--- a/install/components/nvm/install
+++ b/install/components/nvm/install
@@ -2,16 +2,10 @@
 
 wget -qO- https://raw.githubusercontent.com/creationix/nvm/v0.34.0/install.sh | bash
 
-source ~/.bashrc
+. ~/.nvm/nvm.sh
+. ~/.profile
+. ~/.bashrc
 
 command -v nvm
 
 nvm install 10.14.2
-
-cat /var/www/LEMP-setup-guide/install/components/nvm/shell-envs > ~/.bash_profile
-
-source ~/.bash_profile
-
-# . ~/.nvm/nvm.sh
-# . ~/.profile
-# . ~/.bashrc
