--- a/install/components/redis/install
+++ b/install/components/redis/install
@@ -4,6 +4,12 @@
 REDIS_CONF=$(<redis.conf)
 REDIS_CONF_PATH='/etc/redis/redis.conf'
 
+# Figure out PHP Version from php-version or override-php-version in this repo's root config/versions
+PHP_VERSION=$(<../config/php-version)
+if [ -f "../config/override-php-version" ]; then
+    PHP_VERSION=$(<../config/override-php-version)
+fi
+
 # Update
 sudo apt update
 
@@ -25,8 +31,8 @@ fi
 # Restart
 sudo systemctl restart redis-server.service
 
-# Add php redis
-sudo apt-get install php-redis
+# Add php redis depending on PHP_VERSION
+sudo apt-get install -y php"$PHP_VERSION"-redis
 
 # Test it with: redis-cli
 # Default host:port - 127.0.0.1:6379
